--- a/css/main.css
+++ b/css/main.css
@@ -1901,7 +1901,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #ff8187;
+  background: #db4ec6;
 }
 .links-of-blogroll {
   font-size: 13px;
